# encrypted-gallery

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  angular.json  nx.json  package-lock.json  package.json  tsconfig.serve.json
apps/encrypted-gallery/: project.json
apps/encrypted-gallery-ui/: .eslintrc.json  jest.config.ts  project.json  vite.config.ts
apps/encrypted-gallery-ui/src/views/: Home.vue
apps/encrypted-gallery/src/: main.rs  static_file.rs
src/: main.rs  static_file.rs  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: app.component.ts  app.module.ts
src/app/core/services/: toasts.service.ts
src/app/core/services/tauri/: tauri.service.ts
src/app/detail/: detail.component.html
src/app/home/: home.component.html  home.component.ts
src/app/shared/: shared.module.ts
src/assets/i18n/: en.json
web/: package-lock.json  package.json
